refactor: throw error on mdoc template not having validityInfo
Signed-off-by: KiruthikaJeyashankar <kiruthikavjshankar@gmail.com>